- fixing Course Navigation on mobile. (#2536)

--- a/static_v2/scss/common/_header.scss
+++ b/static_v2/scss/common/_header.scss
@@ -590,7 +590,7 @@ header {
       .headerNav {
         position: absolute;
         left: 0;
-        top: 55px;
+        top: 60px;
         right: 0;
 
         ul {
